--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/general.css" />
-    <link rel="stylesheet" href="/css/style.css" />
-    <link rel="stylesheet" href="/css/queries.css" />
+    <link rel="stylesheet" href="css/general.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -185,7 +184,7 @@
                 <img
                   class="country-flag-img"
                   alt="bandera española"
-                  src="/img/languajes/flag_spain.png"
+                  src="img/languajes/flag_spain.png"
                 />
                 <div>
                   <p>Español</p>
@@ -196,7 +195,7 @@
                 <img
                   class="country-flag-img"
                   alt="bandera britanica"
-                  src="/img/languajes/flag_uk.png"
+                  src="img/languajes/flag_uk.png"
                 />
                 <div>
                   <p>Inglés</p>
@@ -388,7 +387,7 @@
             <span class="extra-activity-name">Mama Chole</span>
             <div class="extra-activity-img">
               <img
-                src="/img/secondary/secondary_mamaChole.png"
+                src="img/secondary/secondary_mamaChole.png"
                 alt="Mama Chole"
               />
             </div>
@@ -403,7 +402,7 @@
             <span class="extra-activity-name">Guido Vision</span>
             <div class="extra-activity-img">
               <img
-                src="/img/secondary/secondary_youtube.png"
+                src="img/secondary/secondary_youtube.png"
                 alt="Guido Fernandez Youtube"
               />
             </div>
@@ -416,7 +415,7 @@
           <div class="extra-activities-card">
             <span class="extra-activity-name">K-Stom &excl;T</span>
             <div class="extra-activity-img">
-              <img src="/img/secondary/secondary_kstomit.png" alt="K-Stom !T" />
+              <img src="img/secondary/secondary_kstomit.png" alt="K-Stom !T" />
             </div>
             <p class="extra-activity-title">Remeras Personalizadas v&sol;Web</p>
             <p class="extra-activity-details">
@@ -441,7 +440,7 @@
             <div class="hobbie-item-icon">
               <img
                 class="hobbie-item-img"
-                src="/img/hobbies/hobbie-musicproduction.png"
+                src="img/hobbies/hobbie-musicproduction.png"
                 alt="Producción
               musical"
               />
@@ -452,7 +451,7 @@
             <div class="hobbie-item-icon">
               <img
                 class="hobbie-item-img"
-                src="/img/hobbies/hobbie-boardgames.png"
+                src="img/hobbies/hobbie-boardgames.png"
                 alt="juegos de mesa"
               />
             </div>
@@ -462,7 +461,7 @@
             <div class="hobbie-item-icon">
               <img
                 class="hobbie-item-img"
-                src="/img/hobbies/hobbie-martial.png"
+                src="img/hobbies/hobbie-martial.png"
                 alt="Artes Marciales"
               />
             </div>
@@ -472,7 +471,7 @@
             <div class="hobbie-item-icon">
               <img
                 class="hobbie-item-img"
-                src="/img/hobbies/hobbie-yoga.png"
+                src="img/hobbies/hobbie-yoga.png"
                 alt="Yoga"
               />
             </div>
@@ -482,7 +481,7 @@
             <div class="hobbie-item-icon">
               <img
                 class="hobbie-item-img"
-                src="/img/hobbies/hobbie-musictheory.png"
+                src="img/hobbies/hobbie-musictheory.png"
                 alt="Teoría Musical"
               />
             </div>
@@ -492,7 +491,7 @@
             <div class="hobbie-item-icon">
               <img
                 class="hobbie-item-img"
-                src="/img/hobbies/hobbie-videogames.png"
+                src="img/hobbies/hobbie-videogames.png"
                 alt="Videojuegos"
               />
             </div>
@@ -502,7 +501,7 @@
             <div class="hobbie-item-icon">
               <img
                 class="hobbie-item-img"
-                src="/img/hobbies/hobbie-gardening.png"
+                src="img/hobbies/hobbie-gardening.png"
                 alt="Jardinería"
               />
             </div>
@@ -512,7 +511,7 @@
             <div class="hobbie-item-icon">
               <img
                 class="hobbie-item-img"
-                src="/img/hobbies/hobbie-moto.png"
+                src="img/hobbies/hobbie-moto.png"
                 alt="Motos"
               />
             </div>
