--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header class="header">
       <a href="#">
         <img
-          class="logo"
+          class="header-logo"
           alt="Guido Fernández"
           src="img/GuidoFernandezWebLogo.png"
         />
@@ -66,13 +66,11 @@
                 apasionante camino como programador en el rubro bancario,
                 especializándome en COBOL Mainframe desde los inicios. Puedo
                 decir con certeza que amo de lo que trabajo y con orgullo de
-                haberlo hecho siempre aspirando constantemente a desenvolverme
-                con naturalidad en el ámbito corporativo, poniendo mucha
-                voluntad en absorber lo aprendido de las experiencias vividas,
-                entregar con la máxima calidad posible el trabajo final y
-                mantenerme dúctil y abierto siempre para seguir aprendiendo
-                constantemente tecnologías y metodologías de trabajo nuevas que
-                siempre surjan.
+                haberlo hecho siempre poniendo mucha voluntad en absorber lo
+                aprendido de las experiencias vividas, entregar con la máxima
+                calidad posible el trabajo entregable y mantenerme dúctil y
+                abierto siempre para seguir aprendiendo constantemente
+                tecnologías y metodologías de trabajo nuevas que siempre surjan.
               </p>
             </div>
           </div>
@@ -105,6 +103,10 @@
               <li class="skills-card-item">Smart Test</li>
               <li class="skills-card-item">ChangeMan</li>
             </ul>
+            <img
+              class="skill-background-image"
+              src="img/skills/skill-mainframe2.webp"
+            />
           </div>
           <div class="skills-card">
             <p class="skills-card-title">Web</p>
@@ -117,6 +119,10 @@
               <li class="skills-card-item">JCLs</li>
               <li class="skills-card-item">MongoDB</li>
             </ul>
+            <img
+              class="skill-background-image"
+              src="img/skills/skill-web.webp"
+            />
           </div>
           <div class="skills-card">
             <p class="skills-card-title">Otros</p>
@@ -129,6 +135,10 @@
               <li class="skills-card-item">Photoshop</li>
               <li class="skills-card-item">Logic Pro / Reaper</li>
             </ul>
+            <img
+              class="skill-background-image"
+              src="img/skills/skill-others.webp"
+            />
           </div>
         </div>
         <div class="container container-sub container-secondary-skills">
@@ -217,82 +227,131 @@
         </div>
 
         <div class="container container-experience">
-          <div class="timeline-item">
-            <span class="timeline-item-date">Feb 2009 &sol; Ene 2015</span>
-            <p class="timeline-item-work">
-              BBVA Frances (Sistemas Activos SRL)
-            </p>
-            <p class="timeline-item-job">
-              Analista Programador COBOL Mainframe Jr&sol;Ssr&sol;Sr
-            </p>
-            <div class="timeline-item-business-card">
-              <p>Cuentas &sol; Resúmenes de cuenta</p>
-              <p>Cajas de Seguridad &sol; Paquetes de cuentas</p>
+          <div class="timeline timeline-right">
+            <div class="timeline-item timeline-item-right">
+              <span class="timeline-item-date">Jul 2021 &sol; Presente</span>
+              <p class="timeline-item-work">BBVA Argentina</p>
+              <p class="timeline-item-job">
+                Analista Programador COBOL Mainframe Sr
+              </p>
+              <div class="timeline-item-business-card">
+                <p>Cheques</p>
+                <p>eCheqs</p>
+                <p>Efectos (custodia y descuentos)</p>
+              </div>
+              <div class="timeline-connection"></div>
             </div>
+            <div class="timeline-bar">
+              <div class="timeline-bar-circle"></div>
+              <div class="timeline-bar-line"></div>
+            </div>
+            <div class="timeline-blank"></div>
           </div>
 
-          <div class="timeline-item">
-            <span class="timeline-item-date">Ago 2015 &sol; Ene 2016</span>
-            <p class="timeline-item-work">ISBAN (Acciona IT)</p>
-            <p class="timeline-item-job">
-              Analista Programador COBOL Mainframe Sr
-            </p>
-            <div class="timeline-item-business-card">
-              <p>Tarjetas de débito</p>
-              <p>Tarjetas de crédito</p>
-              <p>Seguimiento de piezas</p>
+          <div class="timeline timeline-left">
+            <div class="timeline-item timeline-item-left">
+              <span class="timeline-item-date">Dic 2018 &sol; Jul 2021</span>
+              <p class="timeline-item-work">Santander Tecnología</p>
+              <p class="timeline-item-job">
+                Analista Programador COBOL Mainframe Sr
+              </p>
+              <div class="timeline-item-business-card">
+                <p>Préstamos Personales</p>
+                <p>Préstamos Prendarios</p>
+                <p>Préstamos Hipotecarios</p>
+              </div>
+              <div class="timeline-connection"></div>
             </div>
+            <div class="timeline-bar">
+              <div class="timeline-bar-circle"></div>
+              <div class="timeline-bar-line"></div>
+            </div>
+            <div class="timeline-blank"></div>
           </div>
 
-          <div class="timeline-item">
-            <span class="timeline-item-date">Ene 2016 &sol; Abr 2017</span>
-            <p class="timeline-item-work">Cognizant Technology Solutions</p>
-            <p class="timeline-item-job">
-              Analista Programador COBOL Mainframe Sr
-            </p>
-            <div class="timeline-item-business-card">
-              <p>Mantenimiento y Soporte</p>
-              <p>Arquitectura de aplicaciones Mainframe</p>
+          <div class="timeline timeline-right">
+            <div class="timeline-item timeline-item-right">
+              <span class="timeline-item-date">Abr 2017 &sol; Dic 2018</span>
+              <p class="timeline-item-work">Isban (Ecosistemas SRL)</p>
+              <p class="timeline-item-job">
+                Analista Programador COBOL Mainframe Sr
+              </p>
+              <div class="timeline-item-business-card">
+                <p>Préstamos</p>
+                <p>Resúmenes de cuenta</p>
+                <p>Plazos Fijos</p>
+              </div>
+              <div class="timeline-connection"></div>
             </div>
+            <div class="timeline-bar">
+              <div class="timeline-bar-circle"></div>
+              <div class="timeline-bar-line"></div>
+            </div>
+            <div class="timeline-blank"></div>
           </div>
 
-          <div class="timeline-item">
-            <span class="timeline-item-date">Abr 2017 &sol; Dic 2018</span>
-            <p class="timeline-item-work">ISBAN (Ecosistemas SRL)</p>
-            <p class="timeline-item-job">
-              Analista Programador COBOL Mainframe Sr
-            </p>
-            <div class="timeline-item-business-card">
-              <p>Préstamos</p>
-              <p>Resúmenes de cuenta</p>
-              <p>Plazos Fijos</p>
+          <div class="timeline timeline-left">
+            <div class="timeline-item timeline-item-left">
+              <span class="timeline-item-date">Ene 2016 &sol; Abr 2017</span>
+              <p class="timeline-item-work">Cognizant Technology Solutions</p>
+              <p class="timeline-item-job">
+                Analista Programador COBOL Mainframe Sr
+              </p>
+              <div class="timeline-item-business-card">
+                <p>Mantenimiento y Soporte</p>
+                <p>Arquitectura de aplicaciones Mainframe</p>
+              </div>
+              <div class="timeline-connection"></div>
             </div>
+            <div class="timeline-bar">
+              <div class="timeline-bar-circle"></div>
+              <div class="timeline-bar-line"></div>
+            </div>
+            <div class="timeline-blank"></div>
           </div>
 
-          <div class="timeline-item">
-            <span class="timeline-item-date">Dic 2018 &sol; Jul 2021</span>
-            <p class="timeline-item-work">Santander Tecnología</p>
-            <p class="timeline-item-job">
-              Analista Programador COBOL Mainframe Sr
-            </p>
-            <div class="timeline-item-business-card">
-              <p>Préstamos Personales</p>
-              <p>Préstamos Prendarios</p>
-              <p>Préstamos Hipotecarios</p>
+          <div class="timeline timeline-right">
+            <div class="timeline-item timeline-item-right">
+              <span class="timeline-item-date">Ago 2015 &sol; Ene 2016</span>
+              <p class="timeline-item-work">Isban (Acciona IT)</p>
+              <p class="timeline-item-job">
+                Analista Programador COBOL Mainframe Sr
+              </p>
+              <div class="timeline-item-business-card">
+                <p>Tarjetas de débito</p>
+                <p>Tarjetas de crédito</p>
+                <p>Seguimiento de piezas</p>
+              </div>
+              <div class="timeline-connection"></div>
             </div>
+            <div class="timeline-bar">
+              <div class="timeline-bar-circle"></div>
+              <div class="timeline-bar-line"></div>
+            </div>
+            <div class="timeline-blank"></div>
           </div>
 
-          <div class="timeline-item">
-            <span class="timeline-item-date">Jul 2021 &sol; Presente</span>
-            <p class="timeline-item-work">BBVA Argentina</p>
-            <p class="timeline-item-job">
-              Analista Programador COBOL Mainframe Sr
-            </p>
-            <div class="timeline-item-business-card">
-              <p>Cheques</p>
-              <p>eCheqs</p>
-              <p>Efectos (custodia y descuento de cheques)</p>
+          <div class="timeline timeline-left">
+            <div class="timeline-item timeline-item-left">
+              <span class="timeline-item-date">Feb 2009 &sol; Ene 2015</span>
+              <p class="timeline-item-work">
+                BBVA Frances (Sistemas Activos SRL)
+              </p>
+              <p class="timeline-item-job">
+                Analista Programador COBOL Mainframe
+              </p>
+              <p class="timeline-item-job">Jr &sol; Ssr &sol; Sr</p>
+              <div class="timeline-item-business-card">
+                <p>Cuentas &sol; Resúmenes</p>
+                <p>Cajas de Seguridad &sol; Paquetes</p>
+              </div>
+              <div class="timeline-connection"></div>
             </div>
+            <div class="timeline-bar">
+              <div class="timeline-bar-circle"></div>
+              <div class="timeline-bar-line"></div>
+            </div>
+            <div class="timeline-blank"></div>
           </div>
         </div>
       </section>
