--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- for iphones X/11/12/13/... -->
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, viewport-fit=cover"
+    />
+
     <link rel="stylesheet" href="css/general.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -71,16 +78,15 @@
                 >Contactame</a
               >
               <p class="about-me-txt-detail">
-                Dos meses luego de egresar de la educación secundaria (2008)
+                &quot;a dos meses de egresar de la educación secundaria (2008)
                 tuve la oportunidad de ya poder empezar a emprender este
                 apasionante camino como programador en el rubro bancario,
                 especializándome en COBOL Mainframe desde los inicios. Puedo
                 decir con certeza que amo de lo que trabajo y con orgullo de
                 haberlo hecho siempre poniendo mucha voluntad en absorber lo
                 aprendido de las experiencias vividas, entregar con la máxima
-                calidad posible el trabajo entregable y mantenerme dúctil y
-                abierto siempre para seguir aprendiendo constantemente
-                tecnologías y metodologías de trabajo nuevas que siempre surjan.
+                calidad posible y mantenerme siempre dúctil y abierto a seguir
+                aprendiendo.&quot;
               </p>
             </div>
           </div>
@@ -92,7 +98,7 @@
         <div class="container">
           <span class="heading-section-tag">Skills</span>
           <h2 class="heading-section-title">
-            Habilidades Técnicas de mi día a día laboral y extralaboral
+            Habilidades técnicas de mi día laboral y extralaboral
           </h2>
         </div>
         <div class="container container-sub container-skills">
@@ -230,7 +236,7 @@
       <!-- EXPERIENCE -->
       <section class="section-experience" id="experience">
         <div class="container">
-          <span class="heading-section-tag">Experiencia Laboral</span>
+          <span class="heading-section-tag">Experiencia</span>
           <h2 class="heading-section-title">
             Mi historia profesional y todo lo que aprendí
           </h2>
@@ -381,8 +387,10 @@
       <!-- EDUCATION -->
       <section class="section-education" id="education">
         <div class="container">
-          <span class="heading-section-tag">Educación Formal</span>
-          <h2 class="heading-section-title">Nobleza Obliga</h2>
+          <span class="heading-section-tag">Educación</span>
+          <h2 class="heading-section-title">
+            Aprendizaje formal que vale la pena contar
+          </h2>
         </div>
 
         <div class="container container-sub container-education">
@@ -408,10 +416,12 @@
               </p>
               <p class="education-card-location">Avellaneda, Buenos Aires</p>
               <p class="education-card-details">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Reprehenderit dolor, ab nostrum earum doloremque deserunt
-                dolorum, sequi dolores laborum officia magnam provident vel,
-                nesciunt temporibus corrupti perspiciatis rem ut nulla?
+                &quot;eternamente agradecido siempre con la generación de profes
+                que tuve. Esta fue la gran época de descubrimiento de la
+                programación y el comienzo de muchas trasnochadas codificando a
+                constante prueba y error, como también de gestar la idea de
+                querer hacer realidad aportar valor real y solucionar vidas.
+                &#128513;&quot;
               </p>
             </div>
           </div>
@@ -444,10 +454,12 @@
                 CABA (Ciudad Autónoma de Buenos Aires)
               </p>
               <p class="education-card-details">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Reprehenderit dolor, ab nostrum earum doloremque deserunt
-                dolorum, sequi dolores laborum officia magnam provident vel,
-                nesciunt temporibus corrupti perspiciatis rem ut nulla?
+                &quot;si bien me considero una persona muy autodidacta y muy
+                apasionada de la tecnología, nunca está de más absorber
+                conocimiento académico y escuchar otras voces intelectuales al
+                respecto y poder compartir buenas ideas. Algún día me tendrán
+                con título bajo el brazo para quien necesite certificación.
+                &#128548;&quot;
               </p>
             </div>
           </div>
@@ -616,8 +628,9 @@
               Analista Programador COBOL Mainframe Sr.
             </p>
             <quote class="contact-me-quote">
-              &quot;La inflación es siempre y en cualquier lugar un fenómeno
-              monetario.&quot;
+              &quot;no hay para mi mejor evitador de guerras y conflictos que
+              agregar valor sin dejar de conversar, acordar, responsabilizarse,
+              comerciar y competir sanamente.&quot;
             </quote>
             <img
               class="contact-me-sign"
