--- a/index.html
+++ b/index.html
@@ -658,6 +658,7 @@
                   <a
                     class="contact-me-button contact-me-button-half"
                     href="https://wa.me/5491162303847?text=Hi%20Guido!"
+                    target="_blank"
                   >
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
@@ -673,6 +674,7 @@
                   <a
                     class="contact-me-button contact-me-button-half"
                     href="tel:5491162303847"
+                    target="_blank"
                   >
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
@@ -693,6 +695,7 @@
                   <a
                     class="contact-me-button"
                     href="mailto:gfernandez87@gmail.com"
+                    target="_blank"
                   >
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
@@ -849,7 +852,10 @@
                   d="M3 2a2 2 0 0 1 2-2h6a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V2zm6 11a1 1 0 1 0-2 0 1 1 0 0 0 2 0z"
                 />
               </svg>
-              <a class="footer-self-contact-link" href="tel:5491162303847"
+              <a
+                class="footer-self-contact-link"
+                href="tel:5491162303847"
+                target="_blank"
                 >(+54) 11 6230-3847</a
               >
             </li>
@@ -867,6 +873,7 @@
               <a
                 class="footer-self-contact-link"
                 href="mailto:gfernandez87@gmail.com"
+                target="_blank"
                 >gfernandez87&commat;gmail.com</a
               >
             </li>
