--- a/index.html
+++ b/index.html
@@ -29,17 +29,24 @@
       nomodule
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
     ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bad+Script&display=swap"
+      rel="stylesheet"
+    />
     <title>Guido Fernández</title>
   </head>
   <body>
     <!-- H E A D E R -->
     <header class="header">
       <a href="#">
-        <img
+        <h1 class="logo-typography">Guido Fernández</h1>
+        <!-- <img
           class="header-logo"
           alt="Guido Fernández"
           src="img/GuidoFernandezWebLogo.png"
-        />
+        /> -->
       </a>
 
       <nav class="main-nav">
@@ -76,8 +83,8 @@
             Dejame contarte un poco acerca de mi
           </h2>
         </div>
-        <div class="container container-about-me">
-          <div class="about-me-box">
+        <div class="container-about-me">
+          <div class="container about-me-box">
             <div
               class="about-me-img"
               role="img"
@@ -92,12 +99,12 @@
                 >Contactame</a
               >
               <p class="about-me-txt-detail">
-                &quot;a dos meses de egresar de la educación secundaria (2008)
-                tuve la oportunidad de ya poder empezar a emprender este
-                apasionante camino como programador en el rubro bancario,
+                &quot;a muy poco tiempo de egresar de la educación secundaria
+                (2008) tuve la oportunidad de ya poder empezar a emprender este
+                apasionante camino como programador en el ámbito laboral,
                 especializándome en COBOL Mainframe desde los inicios. Puedo
                 decir con certeza que amo de lo que trabajo y con orgullo de
-                haberlo hecho siempre poniendo mucha voluntad en absorber lo
+                llevarlo a cabo siempre poniendo mucha voluntad en absorber lo
                 aprendido de las experiencias vividas, entregar con la máxima
                 calidad posible y mantenerme siempre dúctil y abierto a seguir
                 aprendiendo.&quot;
@@ -251,9 +258,7 @@
       <section class="section-experience" id="experience">
         <div class="container">
           <span class="heading-section-tag">Experiencia</span>
-          <h2 class="heading-section-title">
-            Mi historia profesional y todo lo que aprendí
-          </h2>
+          <h2 class="heading-section-title">Mi historia profesional</h2>
         </div>
 
         <div class="container container-experience">
@@ -417,38 +422,6 @@
               stroke="currentColor"
               stroke-width="2"
             >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253"
-              />
-            </svg>
-            <div class="education-card">
-              <span class="education-card-date">2004 &sol; 2008</span>
-              <p class="education-card-title">
-                Secundario Técnico, EET N°7 &quot;José Hernández &quot;
-              </p>
-              <p class="education-card-location">Avellaneda, Buenos Aires</p>
-              <p class="education-card-details">
-                &quot;eternamente agradecido siempre con la generación de profes
-                que tuve. Esta fue la gran época de descubrimiento de la
-                programación y el comienzo de muchas trasnochadas codificando a
-                constante prueba y error, como también de gestar la idea de
-                querer hacer realidad aportar valor real y solucionar vidas.
-                &#128513;&quot;
-              </p>
-            </div>
-          </div>
-
-          <div class="education-item">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              class="education-icon"
-              fill="none"
-              viewBox="0 0 24 24"
-              stroke="currentColor"
-              stroke-width="2"
-            >
               <path d="M12 14l9-5-9-5-9 5 9 5z" />
               <path
                 d="M12 14l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14z"
@@ -468,12 +441,42 @@
                 CABA (Ciudad Autónoma de Buenos Aires)
               </p>
               <p class="education-card-details">
-                &quot;si bien me considero una persona muy autodidacta y muy
-                apasionada de la tecnología, nunca está de más absorber
-                conocimiento académico y escuchar otras voces intelectuales al
-                respecto y poder compartir buenas ideas. Algún día me tendrán
-                con título bajo el brazo para quien necesite certificación.
-                &#128548;&quot;
+                &quot;Si bien me considero una persona muy autodidacta y muy
+                apasionada de la tecnología, nunca está de más absorber un poco
+                de conocimiento académico y escuchar otras voces intelectuales
+                al respecto y poder compartir buenas ideas. &#128548&quot;
+              </p>
+            </div>
+          </div>
+
+          <div class="education-item">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="education-icon"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke="currentColor"
+              stroke-width="2"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253"
+              />
+            </svg>
+            <div class="education-card">
+              <span class="education-card-date">2004 &sol; 2008</span>
+              <p class="education-card-title">
+                Secundario Técnico, EET N°7 &quot;José Hernández &quot;
+              </p>
+              <p class="education-card-location">Avellaneda, Buenos Aires</p>
+              <p class="education-card-details">
+                &quot;Eternamente agradecido siempre con la generación de profes
+                que tuve. Fue una gran época de descubrimiento de la
+                programación y el comienzo de muchos desvelos codificando a
+                constante prueba y error, como también de gestar la idea de
+                querer hacer realidad aportar valor real y solucionar vidas.
+                &#128513;&quot;
               </p>
             </div>
           </div>
@@ -562,7 +565,7 @@
                 alt="juegos de mesa"
               />
             </div>
-            <p class="hobbie-item-description">Juegos de Mesa Euro</p>
+            <p class="hobbie-item-description">Juegos de Mesa</p>
           </div>
           <div class="hobbie-item">
             <div class="hobbie-item-icon">
@@ -638,20 +641,23 @@
         <div class="container container-contact-me">
           <div class="contact-me-card">
             <div class="contact-me-details">
-              <p class="about-me-name">Guido Esteban Fernández</p>
+              <!-- <p class="about-me-name">Guido Esteban Fernández</p> -->
               <p class="about-me-txt-profession">
                 Analista Programador COBOL Mainframe Sr.
               </p>
               <quote class="contact-me-quote">
-                &quot;no hay para mi mejor evitador de guerras y conflictos que
-                agregar valor sin dejar de conversar, acordar,
-                responsabilizarse, comerciar y competir sanamente.&quot;
+                &quot;No hay para mi mejor forma de sortearnos guerras y conflictos sociales que, 
+                en su lugar, 
+                aportar lo mejor de uno agregando valor
+                en la sociedad sin dejar de conversar, acordar,
+                responsabilizarse, comerciar y competir cordial y sanamente.&quot;
               </quote>
-              <img
+              <!-- <img
                 class="contact-me-sign"
                 alt="Guido Fernández"
                 src="img/GuidoFernandezWebLogo.png"
-              />
+              /> -->
+              <p class="logo-typography">Guido Fernández</p>
               <div class="contact-me-links">
                 <div class="contact-me-link-item">
                   <p class="contact-me-data-title">+ 54 11 6230-3847</p>
@@ -773,11 +779,12 @@
         <div class="footer-self-data">
           <div class="footer-self-data-card">
             <a href="#">
-              <img
+              <!-- <img
                 class="logo-footer"
                 alt="Guido Fernández"
                 src="img/GuidoFernandezWebLogo.png"
-              />
+              /> -->
+              <p class="footer-logo logo-typography">Guido Fernández</p>
             </a>
             <p class="footer-self-job">
               Analista Programador COBOL Mainframe Sr.
