--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
         <div class="container">
           <span class="heading-section-tag">Hobbies</span>
           <h2 class="heading-section-title">
-            Pasiones, gustos y caprichos presentes en mi vida
+            Pasiones y gustos presentes en mi vida
           </h2>
         </div>
 
